--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,152 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@android:color/black">
+    android:background="@android:color/black"
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/black"
-        app:titleTextColor="@color/pink"/>
+        app:titleTextColor="@color/pink" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        >
+        android:layout_gravity="center">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="400dp">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/ivFoto"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="600dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentRight="true"
-                    android:src="@mipmap/uzaki"
-                    android:scaleType="centerCrop"/>
+                    android:layout_height="400dp">
 
-                <ImageView
+                    <ImageView
+                        android:id="@+id/ivFoto"
+                        android:layout_width="match_parent"
+                        android:layout_height="600dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentBottom="true"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/uzaki" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="600dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentBottom="true"
+                        android:scaleType="fitXY"
+                        android:src="@mipmap/filter" />
+
+
+                    <TextView
+                        android:id="@+id/tvJudul"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_above="@+id/tvGenre"
+                        android:layout_marginHorizontal="15dp"
+                        android:text="Uzaki-chan Wa Ashobitai!"
+                        android:textColor="@android:color/white"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tvGenre"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_above="@+id/tvSinopsis"
+                        android:layout_marginHorizontal="15dp"
+                        android:text="Slice of life"
+                        android:textColor="@color/pink"
+                        android:textSize="13dp" />
+
+                    <TextView
+                        android:id="@+id/tvSinopsis"
+                        android:layout_width="match_parent"
+                        android:layout_height="55dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginHorizontal="15dp"
+                        android:layout_marginBottom="5dp"
+                        android:ellipsize="end"
+                        android:maxLines="3"
+                        android:text="Pada awal tahun pertamanya di perguruan tinggi, Hana Uzaki bertemu kembali dengan Shinichi Sakurai, seorang kakak kelas yang berada di klub yang sama dengannya selama masa sekolah menengahnya. Namun, yang mengejutkannya, senior yang dulu aktif ini akhirnya menjadi siswa yang, lebih memilih untuk menghabiskan waktu luangnya dengan damai"
+                        android:textColor="@android:color/white"
+                        android:textSize="12dp" />
+
+                </RelativeLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="600dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentRight="true"
-                    android:src="@mipmap/filter"
-                    android:scaleType="fitXY"/>
-
-
-                <TextView
-                    android:id="@+id/tvJudul"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Uzaki-chan Wa Ashobitai!"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-                    android:layout_above="@+id/tvGenre"/>
+                    android:layout_marginTop="5dp"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tvGenre"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Slice of life"
-                    android:textColor="@color/pink"
-                    android:textSize="13dp"
-                    android:layout_above="@+id/tvSinopsis"/>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tvSinopsis"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="15dp"
+                            android:layout_marginBottom="10dp"
+                            android:text="Anime Terbaru"
+                            android:textColor="@android:color/white"
+                            android:textSize="17dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginHorizontal="15dp"
+                            android:gravity="right"
+                            android:text="view all"
+                            android:textColor="#fff" />
+                    </RelativeLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvListTerbaru"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
-                    android:textSize="12dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginHorizontal="15dp"
-                    android:maxLines="3"
-                    android:ellipsize="end"
-                    android:textColor="@android:color/white"
-                    android:layout_alignParentBottom="true"
-                    android:text="Pada awal tahun pertamanya di perguruan tinggi, Hana Uzaki bertemu kembali dengan Shinichi Sakurai, seorang kakak kelas yang berada di klub yang sama dengannya selama masa sekolah menengahnya. Namun, yang mengejutkannya, senior yang dulu aktif ini akhirnya menjadi siswa yang, lebih memilih untuk menghabiskan waktu luangnya dengan damai"/>
+                    android:orientation="vertical">
 
-            </RelativeLayout>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_marginTop="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="15dp"
+                            android:layout_marginBottom="10dp"
+                            android:text="Anime Terpopuler"
+                            android:textColor="@android:color/white"
+                            android:textSize="17dp" />
 
-                <TextView
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Anime Terbaru"
-                    android:textColor="@android:color/white"
-                    android:textSize="20dp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginHorizontal="15dp"
+                            android:gravity="right"
+                            android:text="view all"
+                            android:textColor="#fff" />
+                    </RelativeLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvListTerbaru"
-                    android:layout_marginLeft="15dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvListTerpopuler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Anime Terpopuler"
-                    android:textColor="@android:color/white"
-                    android:textSize="20dp"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvListTerpopuler"
-                    android:layout_marginLeft="15dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
-
-    </ScrollView>
+        </ScrollView>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
