--- a/app/src/main/res/layout/fragment_ongoing.xml
+++ b/app/src/main/res/layout/fragment_ongoing.xml
@@ -17,7 +17,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/activity_ongoingday_view"
+        android:layout_marginHorizontal="10dp"
         android:id="@+id/rvOngoing"/>
 
 </LinearLayout>
