--- a/app/src/main/res/layout/genre_view.xml
+++ b/app/src/main/res/layout/genre_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="6dp"
-    android:paddingHorizontal="3dp"
+    android:paddingRight="6dp"
     android:gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -15,11 +15,11 @@
         android:foreground="?android:attr/selectableItemBackground"
         android:focusable="true"
         android:paddingVertical="100dp"
-        app:cardCornerRadius="5dp">
+        >
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="120dp"
             android:orientation="vertical">
 
             <ImageView
