--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -116,6 +116,7 @@
                             android:textSize="17dp" />
 
                         <TextView
+                            android:id="@+id/viewAllTerbaru"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
@@ -155,6 +156,7 @@
                             android:textSize="17dp" />
 
                         <TextView
+                            android:id="@+id/viewAllTerpopuler"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
