--- a/app/src/main/res/layout/activity_episode_anime.xml
+++ b/app/src/main/res/layout/activity_episode_anime.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@android:color/black"
+    android:background="@color/p_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EpisodeAnime"
@@ -110,8 +110,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Episode"
+            android:textStyle="bold"
             android:textColor="@android:color/white"
-            android:textSize="18dp"/>
+            android:textSize="17dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_marginHorizontal="20dp"
