--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -38,62 +38,64 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_marginVertical="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
-        android:layout_height="125dp">
+        android:layout_height="90dp">
 
         <TextView
-            android:id="@+id/tvJudul"
-            android:layout_marginHorizontal="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Judul Anime"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:layout_above="@+id/tvSinopsis"/>
+        android:id="@+id/tvJudul"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Judul Anime"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:textSize="17dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_alignParentTop="true"/>
 
         <TextView
             android:id="@+id/tvSinopsis"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:textSize="15sp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+                android:text="Ini sinopis"
+            android:layout_below="@+id/tvJudul"
             android:textColor="@android:color/white"
-            android:layout_above="@+id/tvInfo"
-            android:text="Sinopsis"/>
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textSize="14dp"/>
 
         <TextView
             android:id="@+id/tvInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:layout_marginHorizontal="20dp"
+            android:text="Selengkapnya"
             android:textColor="@color/pink"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:text="Info Anime"
-            android:layout_alignParentRight="true" />
+            android:textStyle="bold"
+            android:textSize="13dp"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"/>
 
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
-            android:layout_marginHorizontal="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Episode"
             android:textStyle="bold"
             android:textColor="@android:color/white"
-            android:textSize="20dp"/>
+            android:textSize="16dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginHorizontal="25dp"
             android:layout_marginVertical="10dp"
             android:id="@+id/rvListEpisode"
             android:layout_width="match_parent"
