--- a/app/src/main/res/layout/activity_view_all_terpopuler.xml
+++ b/app/src/main/res/layout/activity_view_all_terpopuler.xml
@@ -17,6 +17,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvViewAll"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
