--- a/app/src/main/res/layout/anime_view.xml
+++ b/app/src/main/res/layout/anime_view.xml
@@ -9,15 +9,15 @@
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:id="@+id/cvAnime"
-        android:layout_width="125dp"
+        android:layout_width="120dp"
         android:layout_marginRight="5dp"
-        android:layout_height="215dp"
+        android:layout_height="205dp"
         app:cardCornerRadius="5dp"
         android:focusable="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:background="@color/back"
+            android:background="@color/p_card2"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -29,7 +29,8 @@
                 android:src="@mipmap/uzaki"/>
 
             <RelativeLayout
-                android:layout_margin="5dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginVertical="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -38,7 +39,7 @@
                     android:id="@+id/tvJudul"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Uzaki Chan wa Asobitai!!!"
+                    android:text="Meika san wa oshikotosenai"
                     android:maxLines="2"
                     android:ellipsize="end"
                     android:textSize="10dp"
