--- a/app/src/main/res/layout/episode_view.xml
+++ b/app/src/main/res/layout/episode_view.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:id="@+id/linear"
             android:layout_width="match_parent"
-            android:background="@color/back"
+            android:background="@color/p_card2"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
