--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@android:color/black"
     android:layout_height="match_parent">
@@ -14,10 +15,11 @@
         app:titleTextColor="@color/pink"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rvBookmark"
-        android:layout_marginStart="10dp" />
+        tools:listitem="@layout/bookmark_view"
+        android:id="@+id/rvBookmark"/>
 
 </LinearLayout>
