--- a/app/src/main/res/layout/fragment_genre.xml
+++ b/app/src/main/res/layout/fragment_genre.xml
@@ -15,7 +15,8 @@
         app:titleTextColor="@color/pink"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginLeft="6dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/genre_view"
