--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="@color/p_background"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
@@ -112,6 +112,7 @@
                             android:layout_marginHorizontal="15dp"
                             android:layout_marginBottom="10dp"
                             android:text="Anime Terbaru"
+                            android:textStyle="bold"
                             android:textColor="@android:color/white"
                             android:textSize="17dp" />
 
@@ -152,6 +153,7 @@
                             android:layout_marginHorizontal="15dp"
                             android:layout_marginBottom="10dp"
                             android:text="Anime Terpopuler"
+                            android:textStyle="bold"
                             android:textColor="@android:color/white"
                             android:textSize="17dp" />
 
