--- a/app/src/main/res/layout/genre_view.xml
+++ b/app/src/main/res/layout/genre_view.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="6dp"
-    android:paddingRight="6dp"
+    android:layout_marginBottom="5dp"
+    android:paddingRight="5dp"
     android:gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
         android:focusable="true"
+        app:cardCornerRadius="10px"
         android:paddingVertical="100dp"
         >
 
@@ -41,6 +42,7 @@
                 android:text="Comedy"
                 android:layout_centerInParent="true"
                 android:textSize="15dp"
+                android:textStyle="bold"
                 android:textColor="#fff" />
 
         </RelativeLayout>
