--- a/app/src/main/res/layout/ongoing_view.xml
+++ b/app/src/main/res/layout/ongoing_view.xml
@@ -10,24 +10,27 @@
         android:id="@+id/cvAnime"
         android:layout_width="match_parent"
         android:layout_marginTop="5dp"
+        app:cardCornerRadius="5dp"
         android:layout_height="wrap_content"
         android:focusable="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:background="@color/backview"
+            android:background="@color/p_card2"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/ivFoto"
-                android:layout_width="70dp"
-                android:layout_height="95dp"
+                android:layout_width="120dp"
+                android:layout_height="110dp"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/uzaki"/>
 
             <RelativeLayout
-                android:padding="9dp"
+                android:layout_marginHorizontal="9dp"
+                android:layout_marginTop="9dp"
+                android:layout_marginBottom="6dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -37,8 +40,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Judul"
-                    android:textSize="14dp"
-                    android:fontFamily="sans-serif-medium"
+                    android:textSize="13dp"
+                    android:textStyle="bold"
+                    android:textColor="@android:color/white"/>
+
+                <TextView
+                    android:layout_below="@id/tvJudul"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Comedy, Fantasy, Ecchi"
+                    android:layout_marginTop="5dp"
+                    android:textSize="12dp"
                     android:textColor="@android:color/white"/>
 
                 <TextView
@@ -46,7 +58,7 @@
                     android:textColor="#FFFFFF"
                     android:id="@+id/tvEpisode"
                     android:layout_width="wrap_content"
-                    android:textSize="11dp"
+                    android:textSize="13dp"
                     android:layout_height="wrap_content"
                     android:text="12 Episode"/>
 
@@ -56,7 +68,7 @@
                     android:textColor="#FFFFFF"
                     android:id="@+id/tvType"
                     android:layout_width="wrap_content"
-                    android:textSize="11dp"
+                    android:textSize="13dp"
                     android:layout_height="wrap_content"
                     android:text="TV"
                     android:layout_alignParentRight="true" />
