--- a/app/src/main/res/layout/view_all.xml
+++ b/app/src/main/res/layout/view_all.xml
@@ -11,31 +11,33 @@
         android:foreground="?android:attr/selectableItemBackground"
         android:id="@+id/cvAnime"
         android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_height="300dp"
         app:cardCornerRadius="3dp"
         android:focusable="true"
-        android:layout_marginRight="7dp"
+        android:layout_marginRight="5dp"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:background="@color/back"
+            android:background="@color/p_card2"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/ivFoto"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="240dp"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/uzaki"/>
 
             <RelativeLayout
-                android:layout_margin="5dp"
+                android:layout_marginHorizontal="6dp"
+                android:layout_marginVertical="3dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:layout_marginTop="5dp"
                     android:layout_alignParentTop="true"
                     android:id="@+id/tvJudul"
                     android:layout_width="wrap_content"
@@ -44,7 +46,7 @@
                     android:maxLines="2"
                     android:ellipsize="end"
                     android:textSize="11dp"
-                    android:fontFamily="sans-serif-medium"
+                    android:textStyle="bold"
                     android:textColor="@android:color/white"/>
 
                 <TextView
@@ -52,7 +54,7 @@
                     android:textColor="@android:color/white"
                     android:id="@+id/tvEpisode"
                     android:layout_width="wrap_content"
-                    android:textSize="10dp"
+                    android:textSize="11dp"
                     android:layout_height="wrap_content"
                     android:text="12 Episode"/>
 
@@ -62,7 +64,7 @@
                     android:textColor="@android:color/white"
                     android:id="@+id/tvType"
                     android:layout_width="wrap_content"
-                    android:textSize="10dp"
+                    android:textSize="11dp"
                     android:layout_height="wrap_content"
                     android:text="TV"
                     android:layout_alignParentRight="true" />
