--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,9 @@
     <color name="search">#232323</color>
     <color name="backview">#121c34</color>
     <color name="yellow">#ffe05d</color>
+    <color name="p_card">#333333</color>
+    <color name="p_background">#000000</color>
+    <color name="p_minitext">#b8b8b8</color>
+    <color name="p_titletext">#eb596e</color>
+    <color name="p_card2">#1B1B1B</color>
 </resources>
